--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ SA: I Nathan Askew, 400377409 certify that this material is my original work.
 -->
 
 <head>
-  <title>Nathan Askew Lab #1</title>
+  <title>Nathan Askew Assignment #1</title>
 
   <style>
     body {font-family: Arial, sans-serif;}
