--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@ SA: I Nathan Askew, 400377409 certify that this material is my original work.
 </header>
 
 <section class="section">
+  <h1>Personal Introduction </h1>
+  <p>
+    My name is Nathan Askew. I am a fourth-year Automation Engineering technology <br>
+    student at McMaster University. With 550+ hours of hands-on experience in <br>
+    laboratories, the Bachelor of Technology program specializes in practical experience. <br>
+    These experiences cover electronics, control systems, chemistry, and CAD to the <br>
+    utmost extent. Additionally, I’m enrolled in the first cohort at McMaster University <br>
+    for the Minor in Nuclear Studies & Society: Nuclear Engineering. Finally, I am <br>
+    proficient with common office software such as Microsoft Teams, Excel, Power BI, Word, etc.
+  </p>
   <h1>Education</h1>
   <p>2017–2021<br>
     Lord Dorchester Beavers<br>
