--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ SA: I Nathan Askew, 400377409 certify that this material is my original work.
         Competitive team member at The Grappling Garden (Hamilton)
       </div>
 
-      <img src="TheGrapplingGarden">
+      <img src="TheGrapplingGarden.jpg">
     </li>
 
     <li class="hobby-item">
