--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ SA: I Nathan Askew, 400377409 certify that this material is my original work.
   </p>
   <h1>Education</h1>
   <p>2017–2021<br>
-    Lord Dorchester Beavers<br>
+    <a href="https://lorddorchester.tvdsb.ca/en/index.aspx" target="_blank">Lord Dorchester Beavers</a><br>
     London, Ontario</p>
 
   <p>2022–Present<br>
-    McMaster University<br>
+    <a href="https://www.mcmaster.ca" target="_blank">McMaster University</a><br>
     Hamilton, Ontario<br>
     Automation Systems Engineering Technology</p>
 </section>
